--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         <meta
             name="description"
-            content="Documentation for the Kittn API"
+            content="Documentation for the FuzionX API"
         >
-    <title>API Reference</title>
+    <title>FuzionX API Reference</title>
 
     <style media="screen">
       .highlight table td { padding: 5px; }
@@ -303,7 +303,9 @@
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo-1e815a84.png" class="logo" alt="" />
+      <div style="padding: 20px; margin: auto; width: fit-content; text-align: center;">
+        <img src="images/logo-3ced1a0a.png" class="logo" alt="" />
+      </div>
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
               <a href="#" data-language-name="ruby">ruby</a>
