deploy: fcfccb240ca7d79553ca4bd0ad67c2c34079f730

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
 <p>sign=md5(api_key1234567time12312312312137789654)</p>
 <h2 id='request-process'>Request Process</h2>
-<p>The root URL for REST access：<code>https://api.fuzionx.io</code></p>
+<p>The root URL for REST access：<code>https://openapi.fuzionx.io</code></p>
 <h3 id='request'>Request</h3>
 <p>All requests are based on Https protocol, contentType in the request header must be uniformly set as: ‘application/x-www-form-urlencoded’.</p>
 
